--- a/static/style.css
+++ b/static/style.css
@@ -349,7 +349,7 @@ tr:nth-child(1) td {
 .intro-desc {
     display: inline-block;
     padding-top: 1vw;
-    font-size: 1.5vw;
+    font-size: calc(18px + 0.5vw);
 }
 
 footer {
