--- a/static/style.css
+++ b/static/style.css
@@ -279,6 +279,9 @@ input:checked ~ .player-not-ready-label {
 .player-list-title {
     font-size: 25px;
 }
+.player-list-container .note {
+    font-size: 14px;
+}
 
 
 .player-end-screen {
